force-app/main/default/objects/Document_Generation_Log__c/Document_Generation_Log__c.object-meta.xml
<CustomObject>
    <label>Document Generation Log</label>
    <nameField>
        <label>Log Name</label>
        <type>AutoNumber</type>
        <displayFormat>LOG-{000000}</displayFormat>
    </nameField>
    <pluralLabel>Document Generation Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>