force-app/main/default/objects/Document_Generation_Log__c/fields/Output_Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Output_Content_Document_Id__c</fullName>
    <label>Output Content Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>