force-app/main/default/objects/Document_Generation_Log__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <label>Template</label>
    <referenceTo>Document_Template__c</referenceTo>
    <relationshipLabel>Generation Logs</relationshipLabel>
    <relationshipName>Generation_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>